fix text-align dropdown-menu

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -113,6 +113,7 @@ ul.dropdown {
   -webkit-box-shadow: 0px 0px 6px #777;
   z-index: 3;
   top: 46px;
+  text-align: left;
 }
 
 li.navmenu {
